--- a/index.html
+++ b/index.html
@@ -2,66 +2,147 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TestPoint - MCQ Practice Platform</title>
+    <title>TestPoint | JKSSB Exam Preparation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <!-- Header -->
-        <header>
-            <h1 class="logo">TestP<span class="green-o">o</span>int</h1>
-            <p class="tagline">Master Your Competitive Exams</p>
-        </header>
 
-        <!-- Subject Selection (shown initially) -->
-        <div id="subject-selection" class="section">
-            <h2>Choose Your Subject</h2>
-            <div class="subject-grid">
-                <button class="subject-btn" onclick="startQuiz('mathematics')">Mathematics</button>
-                <button class="subject-btn" onclick="startQuiz('physics')">Physics</button>
-                <button class="subject-btn" onclick="startQuiz('chemistry')">Chemistry</button>
-                <button class="subject-btn" onclick="startQuiz('biology')">Biology</button>
-            </div>
+<header>
+    <h1>TestPoint</h1>
+    <p>JKSSB Focused Exam Preparation Platform</p>
+</header>
+
+<main>
+
+    <!-- ================= Junior Assistant ================= -->
+    <section class="exam">
+        <h2>Junior Assistant (JKSSB)</h2>
+
+        <div class="syllabus">
+            <h3>Syllabus Overview</h3>
+            <ul>
+                <li>General Knowledge with J&K Special Focus</li>
+                <li>General English</li>
+                <li>General Intelligence & Reasoning</li>
+                <li>Quantitative Aptitude</li>
+                <li>Basic Computer Knowledge</li>
+            </ul>
         </div>
 
-        <!-- Quiz Container (hidden initially) -->
-        <div id="quiz-container" class="section hidden">
-            <div class="quiz-header">
-                <h2 id="subject-name"></h2>
-                <p>Question <span id="question-number">1</span> of <span id="total-questions">10</span></p>
-            </div>
+        <div class="subjects">
+            <h3>Subjects</h3>
+            <button>General Knowledge</button>
+            <button>English</button>
+            <button>Reasoning</button>
+            <button>Quantitative Aptitude</button>
+            <button>Computer Basics</button>
+        </div>
+    </section>
 
-            <div class="question-card">
-                <h3 id="question-text"></h3>
-                <div id="options-container" class="options"></div>
-            </div>
+    <!-- ================= Naib Tehsildar ================= -->
+    <section class="exam">
+        <h2>Naib Tehsildar</h2>
 
-            <div class="quiz-controls">
-                <button id="prev-btn" onclick="previousQuestion()" disabled>Previous</button>
-                <button id="next-btn" onclick="nextQuestion()">Next</button>
-                <button id="submit-btn" onclick="submitQuiz()" class="hidden">Submit Quiz</button>
-            </div>
+        <div class="syllabus">
+            <h3>Syllabus Overview</h3>
+            <ul>
+                <li>General Knowledge & Current Affairs</li>
+                <li>Jammu & Kashmir History, Geography, Polity</li>
+                <li>General English</li>
+                <li>General Mental Ability</li>
+                <li>Basic Mathematics</li>
+            </ul>
         </div>
 
-        <!-- Results Container (hidden initially) -->
-        <div id="results-container" class="section hidden">
-            <h2>Quiz Results</h2>
-            <div class="results-card">
-                <div class="score-display">
-                    <h1 id="score"></h1>
-                    <p id="score-message"></p>
-                </div>
-                <div class="result-details">
-                    <p>Correct Answers: <span id="correct-count"></span></p>
-                    <p>Wrong Answers: <span id="wrong-count"></span></p>
-                    <p>Percentage: <span id="percentage"></span>%</p>
-                </div>
-                <button onclick="restartQuiz()" class="restart-btn">Take Another Quiz</button>
-            </div>
+        <div class="subjects">
+            <h3>Subjects</h3>
+            <button>GK & Current Affairs</button>
+            <button>J&K Specific GK</button>
+            <button>English</button>
+            <button>Mental Ability</button>
+            <button>Mathematics</button>
         </div>
-    </div>
+    </section>
 
-    <script src="script.js"></script>
+    <!-- ================= Patwari ================= -->
+    <section class="exam">
+        <h2>Patwari</h2>
+
+        <div class="syllabus">
+            <h3>Syllabus Overview</h3>
+            <ul>
+                <li>General Knowledge</li>
+                <li>English Language</li>
+                <li>Mathematics</li>
+                <li>Reasoning</li>
+                <li>Computer Knowledge</li>
+            </ul>
+        </div>
+
+        <div class="subjects">
+            <h3>Subjects</h3>
+            <button>General Knowledge</button>
+            <button>English</button>
+            <button>Mathematics</button>
+            <button>Reasoning</button>
+            <button>Computer</button>
+        </div>
+    </section>
+
+    <!-- ================= Accounts Assistant ================= -->
+    <section class="exam">
+        <h2>Accounts Assistant</h2>
+
+        <div class="syllabus">
+            <h3>Syllabus Overview</h3>
+            <ul>
+                <li>General Knowledge</li>
+                <li>Basic Accounting Principles</li>
+                <li>General English</li>
+                <li>Quantitative Aptitude</li>
+                <li>Computer Applications</li>
+            </ul>
+        </div>
+
+        <div class="subjects">
+            <h3>Subjects</h3>
+            <button>General Knowledge</button>
+            <button>Accounting</button>
+            <button>English</button>
+            <button>Quantitative Aptitude</button>
+            <button>Computer</button>
+        </div>
+    </section>
+
+    <!-- ================= Sub Inspector (Police) ================= -->
+    <section class="exam">
+        <h2>Sub Inspector (Police)</h2>
+
+        <div class="syllabus">
+            <h3>Syllabus Overview</h3>
+            <ul>
+                <li>General Knowledge & Current Affairs</li>
+                <li>General English</li>
+                <li>Reasoning & Mental Ability</li>
+                <li>Numerical Ability</li>
+            </ul>
+        </div>
+
+        <div class="subjects">
+            <h3>Subjects</h3>
+            <button>General Knowledge</button>
+            <button>English</button>
+            <button>Reasoning</button>
+            <button>Numerical Ability</button>
+        </div>
+    </section>
+
+</main>
+
+<footer>
+    <p>© 2026 TestPoint | JKSSB Exam Preparation</p>
+</footer>
+
+<script src="script.js"></script>
 </body>
 </html>
