--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <header>
-    <h1>TestPoint</h1>
+    <h1 class="logo">TestP<span class="green-o">o</span>int</h1>
     <p>JKSSB Focused Exam Preparation Platform</p>
 </header>
 
