--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
 </head>
 <body>
 
-<header>
-    <h1 class="logo">TestP<span class="green-o">o</span>int</h1>
-    <p>JKSSB Focused Exam Preparation Platform</p>
+<header class="navbar">
+    <div class="logo">
+        <h1 class="logo">TestP<span class="green-o">o</span>int</h1>
+    </div>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Subjects</a>
+        <a href="#">JKSSB Exams</a>
+        <a href="#">Mock Tests</a>
+        <a href="#">Syllabus</a>
+    </nav>
 </header>
 
 <main>
