--- a/index.html
+++ b/index.html
@@ -21,132 +21,29 @@
     </nav>
 </header>
 
-<main>
+ <section class="hero">
+        <h1>JKSSB Exam Preparation Made Simple</h1>
+        <p>
+            Practice subject-wise MCQs, previous year questions, and mock tests
+            designed specially for JKSSB aspirants.
+        </p>
 
-    <!-- ================= Junior Assistant ================= -->
-    <section class="exam">
-        <h2>Junior Assistant (JKSSB)</h2>
-
-        <div class="syllabus">
-            <h3>Syllabus Overview</h3>
-            <ul>
-                <li>General Knowledge with J&K Special Focus</li>
-                <li>General English</li>
-                <li>General Intelligence & Reasoning</li>
-                <li>Quantitative Aptitude</li>
-                <li>Basic Computer Knowledge</li>
-            </ul>
-        </div>
-
-        <div class="subjects">
-            <h3>Subjects</h3>
-            <button>General Knowledge</button>
-            <button>English</button>
-            <button>Reasoning</button>
-            <button>Quantitative Aptitude</button>
-            <button>Computer Basics</button>
+        <div class="hero-buttons">
+            <button class="primary">Study by Subject</button>
+            <button class="secondary">Study by Exam</button>
         </div>
     </section>
 
-    <!-- ================= Naib Tehsildar ================= -->
-    <section class="exam">
-        <h2>Naib Tehsildar</h2>
-
-        <div class="syllabus">
-            <h3>Syllabus Overview</h3>
-            <ul>
-                <li>General Knowledge & Current Affairs</li>
-                <li>Jammu & Kashmir History, Geography, Polity</li>
-                <li>General English</li>
-                <li>General Mental Ability</li>
-                <li>Basic Mathematics</li>
-            </ul>
-        </div>
-
-        <div class="subjects">
-            <h3>Subjects</h3>
-            <button>GK & Current Affairs</button>
-            <button>J&K Specific GK</button>
-            <button>English</button>
-            <button>Mental Ability</button>
-            <button>Mathematics</button>
-        </div>
+     <!-- NEXT CONTENT -->
+    <section class="subjects-section">
+        <h2>Popular JKSSB Subjects</h2>
+        <!-- subject cards here -->
     </section>
 
-    <!-- ================= Patwari ================= -->
-    <section class="exam">
-        <h2>Patwari</h2>
-
-        <div class="syllabus">
-            <h3>Syllabus Overview</h3>
-            <ul>
-                <li>General Knowledge</li>
-                <li>English Language</li>
-                <li>Mathematics</li>
-                <li>Reasoning</li>
-                <li>Computer Knowledge</li>
-            </ul>
-        </div>
-
-        <div class="subjects">
-            <h3>Subjects</h3>
-            <button>General Knowledge</button>
-            <button>English</button>
-            <button>Mathematics</button>
-            <button>Reasoning</button>
-            <button>Computer</button>
-        </div>
+    <section class="exams-section">
+        <h2>JKSSB Exams Covered</h2>
+        <!-- exams list here -->
     </section>
-
-    <!-- ================= Accounts Assistant ================= -->
-    <section class="exam">
-        <h2>Accounts Assistant</h2>
-
-        <div class="syllabus">
-            <h3>Syllabus Overview</h3>
-            <ul>
-                <li>General Knowledge</li>
-                <li>Basic Accounting Principles</li>
-                <li>General English</li>
-                <li>Quantitative Aptitude</li>
-                <li>Computer Applications</li>
-            </ul>
-        </div>
-
-        <div class="subjects">
-            <h3>Subjects</h3>
-            <button>General Knowledge</button>
-            <button>Accounting</button>
-            <button>English</button>
-            <button>Quantitative Aptitude</button>
-            <button>Computer</button>
-        </div>
-    </section>
-
-    <!-- ================= Sub Inspector (Police) ================= -->
-    <section class="exam">
-        <h2>Sub Inspector (Police)</h2>
-
-        <div class="syllabus">
-            <h3>Syllabus Overview</h3>
-            <ul>
-                <li>General Knowledge & Current Affairs</li>
-                <li>General English</li>
-                <li>Reasoning & Mental Ability</li>
-                <li>Numerical Ability</li>
-            </ul>
-        </div>
-
-        <div class="subjects">
-            <h3>Subjects</h3>
-            <button>General Knowledge</button>
-            <button>English</button>
-            <button>Reasoning</button>
-            <button>Numerical Ability</button>
-        </div>
-    </section>
-
-</main>
 
 <footer>
     <p>© 2026 TestPoint | JKSSB Exam Preparation</p>
