--- a/index.html
+++ b/index.html
@@ -45,6 +45,42 @@
         <!-- exams list here -->
     </section>
 
+    <section class="subjects-section">
+    <h2>Popular JKSSB Subjects</h2>
+
+    <div class="cards">
+        <div class="card">General Knowledge</div>
+        <div class="card">English</div>
+        <div class="card">Reasoning</div>
+        <div class="card">Quantitative Aptitude</div>
+        <div class="card">Computer Knowledge</div>
+    </div>
+</section>
+
+    <section class="exams-section">
+    <h2>JKSSB Exams Covered</h2>
+
+    <ul>
+        <li>Junior Assistant</li>
+        <li>Naib Tehsildar</li>
+        <li>Patwari</li>
+        <li>Accounts Assistant</li>
+        <li>Sub Inspector (Police)</li>
+    </ul>
+</section>
+
+    <section class="why-testpoint">
+    <h2>Why TestPoint?</h2>
+
+    <div class="features">
+        <div>✔ JKSSB-focused content only</div>
+        <div>✔ Exam-oriented MCQs & PYQs</div>
+        <div>✔ Simple & mobile-friendly</div>
+        <div>✔ Built by an aspirant, for aspirants</div>
+    </div>
+</section>
+
+
 <footer>
     <p>© 2026 TestPoint | JKSSB Exam Preparation</p>
 </footer>
