--- a/index.html
+++ b/index.html
@@ -3,25 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>TestPoint | JKSSB Exam Preparation</title>
+
+    <!-- IMPORTANT for mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header class="navbar">
-    <div class="logo">
-        <h1 class="logo">TestP<span class="green-o">o</span>int</h1>
-    </div>
+    <!-- ================= NAVBAR ================= -->
+    <header class="navbar">
+        <div class="logo">
+            <h1 class="logo">TestP<span class="green-o">o</span>int</h1>
+        </div>
 
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Subjects</a>
-        <a href="#">JKSSB Exams</a>
-        <a href="#">Mock Tests</a>
-        <a href="#">Syllabus</a>
-    </nav>
-</header>
+        <nav>
+            <a href="#">🏠 Home</a>
+            <a href="#">📚 Subjects</a>
+            <a href="#">🧾 JKSSB Exams</a>
+            <a href="#">📝 Mock Tests</a>
+            <a href="#">📄 Syllabus</a>
+        </nav>
+    </header>
 
- <section class="hero">
+    <!-- ================= HERO SECTION ================= -->
+    <section class="hero">
         <h1>JKSSB Exam Preparation Made Simple</h1>
         <p>
             Practice subject-wise MCQs, previous year questions, and mock tests
@@ -29,62 +37,41 @@
         </p>
 
         <div class="hero-buttons">
-            <button class="primary">Study by Subject</button>
-            <button class="secondary">Study by Exam</button>
+            <button class="primary">📘 Study by Subject</button>
+            <button class="secondary">🧾 Study by Exam</button>
         </div>
     </section>
 
-     <!-- NEXT CONTENT -->
+    <!-- ================= SUBJECTS ================= -->
     <section class="subjects-section">
         <h2>Popular JKSSB Subjects</h2>
-        <!-- subject cards here -->
+
+        <div class="cards">
+            <div class="card">🌍 General Knowledge</div>
+            <div class="card">✍️ English</div>
+            <div class="card">🧠 Reasoning</div>
+            <div class="card">➗ Quantitative Aptitude</div>
+            <div class="card">💻 Computer Knowledge</div>
+        </div>
     </section>
 
+    <!-- ================= EXAMS ================= -->
     <section class="exams-section">
         <h2>JKSSB Exams Covered</h2>
-        <!-- exams list here -->
+
+        <ul>
+            <li>🗂 Junior Assistant</li>
+            <li>🏛 Naib Tehsildar</li>
+            <li>📐 Patwari</li>
+            <li>💼 Accounts Assistant</li>
+            <li>🚓 Sub Inspector (Police)</li>
+        </ul>
     </section>
 
-    <section class="subjects-section">
-    <h2>Popular JKSSB Subjects</h2>
+    <!-- ================= FOOTER ================= -->
+    <footer>
+        <p>© 2026 TestP<span class="green-o">o</span>int | JKSSB Exam Preparation</p>
+    </footer>
 
-    <div class="cards">
-        <div class="card">General Knowledge</div>
-        <div class="card">English</div>
-        <div class="card">Reasoning</div>
-        <div class="card">Quantitative Aptitude</div>
-        <div class="card">Computer Knowledge</div>
-    </div>
-</section>
-
-    <section class="exams-section">
-    <h2>JKSSB Exams Covered</h2>
-
-    <ul>
-        <li>Junior Assistant</li>
-        <li>Naib Tehsildar</li>
-        <li>Patwari</li>
-        <li>Accounts Assistant</li>
-        <li>Sub Inspector (Police)</li>
-    </ul>
-</section>
-
-    <section class="why-testpoint">
-    <h2>Why TestPoint?</h2>
-
-    <div class="features">
-        <div>✔ JKSSB-focused content only</div>
-        <div>✔ Exam-oriented MCQs & PYQs</div>
-        <div>✔ Simple & mobile-friendly</div>
-        <div>✔ Built by an aspirant, for aspirants</div>
-    </div>
-</section>
-
-
-<footer>
-    <p>© 2026 TestPoint | JKSSB Exam Preparation</p>
-</footer>
-
-<script src="script.js"></script>
 </body>
 </html>
