--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
         <h2>Popular JKSSB Subjects</h2>
 
         <div class="cards">
-            <div class="card">🌍 General Knowledge</div>
-            <div class="card">✍️ English</div>
-            <div class="card">🧠 Reasoning</div>
-            <div class="card">➗ Quantitative Aptitude</div>
-            <div class="card">💻 Computer Knowledge</div>
+    <a href="gk.html" class="card">🌍 General Knowledge</a>
+    <a href="#" class="card">✍️ English</a>
+    <a href="#" class="card">🧠 Reasoning</a>
+    <a href="#" class="card">➗ Quantitative Aptitude</a>
+    <a href="#" class="card">💻 Computer Knowledge</a>
         </div>
+
     </section>
 
     <!-- ================= EXAMS ================= -->
