--- a/gk.html
+++ b/gk.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <header class="navbar">
         <div class="logo">
-            TestP<span class="green-o">o</span>int
+            <h1 class="logo">TestP<span class="green-o">o</span>int</h1>
         </div>
 
         <nav>
