--- a/gk.html
+++ b/gk.html
@@ -30,6 +30,14 @@
         </p>
     </section>
 
+    <section class="subjects-section">
+    <h2>Practice MCQs</h2>
+
+    <!-- MCQs will load here -->
+    <div id="mcq-container"></div>
+</section>
+
+
     <!-- MCQ Section -->
     <section class="subjects-section">
         <h2>Practice MCQs</h2>
@@ -51,6 +59,9 @@
     <footer>
         <p>© 2026 TestP<span class="green-o">o</span>int</p>
     </footer>
+
+        <script src="js/mcq-engine.js"></script>
+
 
 </body>
 </html>
