--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <!-- ================= NAVBAR ================= -->
     <header class="navbar">
         <div class="logo">
-            <h1 class="logo">TestP<span class="green-o">o</span>int</h1>
+            
         </div>
+                <a href="index.html" class="logo-link">
+                    <h1 class="logo">TestP<span class="green-o">o</span>int</h1>
+                 </a>
 
         <nav>
             <a href="#">🏠 Home</a>
