--- a/gk.html
+++ b/gk.html
@@ -12,7 +12,10 @@
     <!-- Navbar -->
     <header class="navbar">
         <div class="logo">
-            <h1 class="logo">TestP<span class="green-o">o</span>int</h1>
+            <a href="index.html" class="logo-link">
+                <h1 class="logo">TestP<span class="green-o">o</span>int</h1>
+            </a>
+
         </div>
 
         <nav>
