--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         <div class="logo">
             
         </div>
-                <a href="index.html" class="logo-link">
-                    <h1 class="logo">TestP<span class="green-o">o</span>int</h1>
-                 </a>
+                <h1 class="logo">
+                    <a href="index.html">TestP<span class="green-o">o</span>int</a>
+                </h1>
+
 
         <nav>
             <a href="#">🏠 Home</a>
