--- a/gk.html
+++ b/gk.html
@@ -12,9 +12,10 @@
     <!-- Navbar -->
     <header class="navbar">
         <div class="logo">
-            <a href="index.html" class="logo-link">
-                <h1 class="logo">TestP<span class="green-o">o</span>int</h1>
-            </a>
+            <h1 class="logo">
+                <a href="index.html">TestP<span class="green-o">o</span>int</a>
+            </h1>
+
 
         </div>
 
