--- a/index.html
+++ b/index.html
@@ -15,22 +15,21 @@
 
     <!-- ================= NAVBAR ================= -->
     <header class="navbar">
-        <div class="logo">
-            
-        </div>
-                <h1 class="logo">
-                    <a href="index.html">TestP<span class="green-o">o</span>int</a>
-                </h1>
+    <div class="navbar-left">
+        <h1 class="logo">
+            <a href="index.html">TestP<span class="green-o">o</span>int</a>
+        </h1>
+    </div>
 
-
-        <nav>
-            <a href="#">🏠 Home</a>
-            <a href="#">📚 Subjects</a>
-            <a href="#">🧾 JKSSB Exams</a>
-            <a href="#">📝 Mock Tests</a>
-            <a href="#">📄 Syllabus</a>
-        </nav>
+    <nav class="navbar-right">
+        <a href="index.html">🏠 Home</a>
+        <a href="#">📚 Subjects</a>
+        <a href="#">🧾 JKSSB Exams</a>
+        <a href="#">📝 Mock Tests</a>
+        <a href="#">📄 Syllabus</a>
+    </nav>
     </header>
+
 
     <!-- ================= HERO SECTION ================= -->
     <section class="hero">
